--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-router-dom": "^6.14.2",
-    "styled-components": "^6.0.4"
+    "styled-components": "^6.0.4",
+    "swiper": "^10.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.22.9",
